--- a/themes/gauge_theme/static/css/theme.css
+++ b/themes/gauge_theme/static/css/theme.css
@@ -10,6 +10,7 @@
 
 .hidden {
   visibility: hidden;
+  display:none;
 }
  
 :root {
@@ -226,7 +227,8 @@ header.top:hover {
   font-size: 13px;
   line-height: 1.85;
   letter-spacing: normal;
-  color: #666666;
+  color: #5e5e5e;
+  text-decoration: none;
 }
 
 .sub-heading {
@@ -278,7 +280,7 @@ header.top:hover {
 
 .docs-container h2 {
   font-size: 18px;
-  font-weight: bold;
+  font-weight: 600;
   margin-bottom:20px;
 }
 
@@ -413,7 +415,7 @@ footer {
 }
 
 body {
-  margin-top: 0 !important;
+  margin:0px!important;
 }
 
 .content>.section>h1 {
@@ -443,7 +445,7 @@ body {
   padding: 5px 5px 5px 29px;
   background-repeat: no-repeat;
   position: relative;
-  top: 42px;
+  top: 36px;
   z-index: 1;
   background-size: 14px;
   left: 11px;
@@ -594,7 +596,7 @@ code {
 
 .description {
   font-size: 14px;
-  color: #000000;
+  color: #1e1e1e;
   font-family: "Open Sans";
   line-height: 1.86;
   font-weight: normal;
@@ -1360,10 +1362,13 @@ img {
 .edit-page u {
   position: relative;
   top:-4px;
+  font-size: 14px;
+  font-family: 'Open Sans';
 }
 
 .edit-page>a {
   color: #337ab7;
+  text-decoration: none;
 }
 
 .edit-page .fa-github {
@@ -1373,8 +1378,14 @@ img {
 }
 
 #gpl_icon {
-  width: 5%;
+  width: 73.8px;
   margin-bottom: 1%;
+}
+.gpl__icontext--block {
+  position: relative;
+  top: -17px;
+  display: inline-block;
+  font-size: 16px;
 }
 .visuallyhidden {
     display: none;
@@ -1599,7 +1610,6 @@ img {
   }
   .left-sidebar-container {
     grid-column: 2/4;
-    min-width: 21%;
   }
 }
 
@@ -1628,6 +1638,9 @@ img {
   }
   .feature-desc {
     min-height: 104px;
+  }
+  .left-sidebar-container {
+    min-width: 21%!important;
   }
 }
 
@@ -1696,10 +1709,10 @@ img {
 
   .left-sidebar-container {
     grid-column: 2/4;
-    min-width: 21%;
+    min-width: 24%;
     top: 100px;
     padding-left: 25px;
-    padding-top: 15px;
+    padding-top: 25px;
     position: fixed;
     height: 100%;
     background-color: #f2f2f2;
@@ -1717,7 +1730,6 @@ img {
   }
   #overview , #get-started {
     margin-top: 20px;
-    padding-top: 64px;
   }
 }
 
@@ -1736,6 +1748,7 @@ img {
   }
   .docs-container.no-right-bar {
     grid-column: 3/6!important;
+    max-width: 100em;
   }
 
   .right-sidebar-container {
